--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
 dnspython==2.8.0
-Flask==3.1.2
-flask-cors==6.0.1
+fastapi==0.115.0
+uvicorn==0.32.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.182.0
