--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,10 @@ uvicorn==0.32.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.182.0
-google-auth==2.40.3
+google-auth>=2.45.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.5
+google-genai>=1.56.0
 googleapis-common-protos==1.70.0
 grpcio==1.75.0
 grpcio-status==1.71.2
