--- a/vercel.json
+++ b/vercel.json
@@ -19,8 +19,15 @@
       "dest": "api/index.py"
     },
     {
+      "src": "/static/(.*)",
+      "dest": "/frontend/build/static/$1"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/frontend/build/index.html"
     }
   ],
   "env": {
